# wp-wowrevenue-authz-guard

./: README.md  pyproject.toml
src/wp_wowrevenue_authz_guard/: __init__.py  cli.py  scanner.py
tests/: test_scanner.py
