[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wp-wowrevenue-authz-guard"
version = "0.1.0"
description = "Scanner for WowRevenue <= 2.1.3 missing authorization risk."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "VictorStackAI"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[project.scripts]
wowrevenue-authz-guard = "wp_wowrevenue_authz_guard.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
